--- a/00home.css
+++ b/00home.css
@@ -1,4 +1,3 @@
-
 body {
 	margin: 0;
 	
@@ -17,18 +16,27 @@ h1 {
 
 a {
 	text-decoration: none;
+	display: block;
 }
 
 a:link {color: white;}
 a:visited { color: white; }
-a:hover { color: green; }
+a:hover { 
+	color: #051152;
+	background-color: white;
+	opacity: .7;
+}
 a:active { color: blue; }
 
 
 #design_G {
+	margin-top: 3px;
+	margin-bottom: 3px;
 	height: 10px;
 	width: 100%;
-	background-color: #59d229;
+	background-color: #14418a;
+	border-top: 3px #051152 solid;
+	border-bottom: 3px #051152 solid;
 }
 .onsen {
 	float: left;
@@ -38,12 +46,14 @@ a:active { color: blue; }
 }
 
 #menu{
-	margin: 0px, 0px;
+	margin: 0px 0px 0px 0px;
 	width: auto;
 	border-left: 1px #666666 solid;
 	border-right: 1px #666666 solid;
-	background-color: #59d229;
+	background-color: #14418a;
 	overflow: hidden;
+	border-top: 3px black solid;
+	border-bottom: 3px black solid;
 }
 #M_menu{
 	margin:0px auto; width:1120px;
@@ -59,6 +69,17 @@ a:active { color: blue; }
 	float: left;
 	display: block;
 	text-align: center;
+}
+#intro{
+	margin: 10px;
+	padding: 5px;
+	width: 97%;
+	height: auto;
+	font-style: oblique;
+	font-weight: bolder;
+	word-spacing: 10px;
+	text-align: left;
+	line-height: auto;
 }
 
 
@@ -88,7 +109,7 @@ a:active { color: blue; }
 スライドショーの animation を設定*/
 #photos {
 	position:absolute;
-	top:0;
+	top:3px;
 	width:5600px;
 	animation: imgPassToLeft0 30s infinite;
 }
@@ -105,7 +126,8 @@ a:active { color: blue; }
 /*送りボタン文字（＜、＞）の設定*/
 .b_left span, .b_right span {
 	position: absolute;
-	font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+	font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", 
+	"メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
 	font-size: 40px;
 	font-weight: bold;
 	opacity:0;
@@ -312,3 +334,85 @@ a:active { color: blue; }
 	96% { left:-100%; }
 	100% { left:0%; }
 }
+
+
+#BoxInclude{
+	margin: 5px 30px 30px 30px; 
+	width: 95%;
+	height: auto;
+}
+
+#BoxFirst{
+	margin-top: 15px;
+	background-color: none;
+	width: 48%;
+	border: 2px #051152 solid;
+	height: auto;
+	float: left;
+}
+
+#BoxSecond{
+	margin-top: 15px;
+	background-color: none;
+	width: 48%;
+	border: 2px #051152 solid;
+	height: auto;
+	float: right;
+
+}
+
+#BoxThird{
+	margin-top : 15px;
+	background-color: none;
+	width: 48%;
+	border: 2px #051152 solid;
+	height: auto;
+	float: left;
+}
+
+#BoxFourth{
+	margin-top: 15px;
+	background-color: none;
+	width: 48%;
+	border: 2px #051152 solid;
+	height: auto;
+	float: right;
+}
+#BoxGallery{
+	margin-top: 15px;
+	background-color: none;
+	width: 100%;
+/*	border: 3px black solid;*/
+	height: auto;
+	float: left;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+	padding: 1%;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+th {
+	background-color: #14418a;
+	color: white;
+}
+td:hover{
+	background-color:#89a0c4;
+	color: white;
+}
+
+#corp {
+	margin-top: 30px;
+	margin-left: 3%;
+	margin-right: 3%;
+	width: 94%;
+	float: right;
+	border-top: 1px solid #ddd;
+	
+}
+
